[package]
name = "migrator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
hex = "0.4"
sqlx = { version = "0.7", default-features = false, features = ["migrate", "postgres", "runtime-tokio", "tls-rustls"] }
tracing = "0.1"
