[package]
name = "migrator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "migrate"
required-features = ["cli"]

[dependencies]
chrono = "0.4"
clap = { version = "4.3", features = ["derive", "env"], optional = true }
color-eyre = { version = "0.6", optional = true }
dotenvy = { version = "0.15", optional = true }
eyre = { version = "0.6", optional = true }
hex = "0.4"
sqlx = { version = "0.7", default-features = false, features = ["migrate", "postgres", "runtime-tokio", "tls-rustls"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"], optional = true }
tracing = "0.1"
tracing-error = { version = "0.2", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

[features]
cli = ["clap", "color-eyre", "dotenvy", "eyre", "tokio", "tracing-error", "tracing-subscriber"]
