[package]
name = "migrator"
description = "A simple library for managing database migrations"
version = "0.2.0"
license = "MIT"
homepage = "https://github.com/TheHackerApp/migrator"
repository = "https://github.com/TheHackerApp/migrator.git"
edition = "2021"
publish = ["wafflehacks"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "migrate"
required-features = ["cli"]

[dependencies]
chrono = "0.4"
clap = { version = "4.5.4", features = ["derive", "env"], optional = true }
color-eyre = { version = "0.6", optional = true }
dotenvy = { version = "0.15", optional = true }
eyre = { version = "0.6", optional = true }
hex = "0.4"
logging = { version = "0.1", registry = "wafflehacks", optional = true }
sqlx = { version = "0.7", default-features = false, features = ["migrate", "postgres", "runtime-tokio", "tls-rustls"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"], optional = true }
tracing = "0.1"

[features]
cli = ["clap", "color-eyre", "dotenvy", "eyre", "logging", "tokio"]
